# ClawX

./: README.ja-JP.md  README.md  README.zh-CN.md  electron-builder.yml  package.json  pnpm-lock.yaml
.github/workflows/: check.yml  package-linux-installer-arm64-manual.yml  package-win-manual.yml  release.yml
electron/main/: launch-at-startup.ts  tray.ts
electron/utils/: channel-config.ts
installer-tauri/: README.md  package.json
installer-tauri/src/: App.tsx  index.css
installer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
installer-tauri/src-tauri/resources/: README.md
installer-tauri/src-tauri/src/: install.rs  lib.rs  main.rs  os_utils.rs  shortcuts.rs
installer-tauri/src/components/: StepFinish.tsx  StepInstall.tsx  StepLicense.tsx  StepPath.tsx  StepWelcome.tsx
resources/cli/posix/: openclaw
resources/cli/win32/: openclaw  openclaw.cmd
scripts/: build-installer.mjs
src/: App.tsx
src/components/layout/: Sidebar.tsx
src/components/ui/: confirm-dialog.tsx
src/i18n/locales/en/: agents.json  chat.json  settings.json  setup.json
src/i18n/locales/ja/: agents.json  chat.json  settings.json  setup.json
src/i18n/locales/zh/: agents.json  chat.json  settings.json  setup.json
src/pages/Setup/: index.tsx
src/styles/: globals.css
